--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "vscode": "^1.89.0"
   },
   "categories": [
-    "Other"
+    "Other",
+    "Education"
   ],
   "activationEvents": [
     "onStartupFinished"
