refactor: Remove RecordFilesViewProvider and update localization
- Remove RecordFilesViewProvider class and related code
- Update package.json to use localized view names
- Update Italian and English localization files with new record files view labels
- Modify icon.svg and icon.png with subtle design changes

--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
       "vs-code-recorder": [
         {
           "id": "recordFiles",
-          "name": "Record Files",
+          "name": "%view.recordFiles.name%",
           "icon": "icon.svg",
-          "contextualTitle": "Record Files"
+          "contextualTitle": "%view.recordFiles.contextualTitle%"
         }
       ]
     },
