feat(recording): Add delete and reveal file commands for record files
- Add new commands to delete and reveal recorded files in the file explorer
- Update package.json with new command registrations and menu configurations
- Add localization support for new command titles and confirmation dialog
- Implement file deletion with recursive folder support
- Enhance record files view with additional context menu actions

--- a/package.json
+++ b/package.json
@@ -38,6 +38,16 @@
         "command": "vs-code-recorder.refreshRecordFiles",
         "title": "%command.refreshRecordFiles.title%",
         "icon": "$(refresh)"
+      },
+      {
+        "command": "vs-code-recorder.deleteRecordFile",
+        "title": "%command.deleteRecordFile.title%",
+        "icon": "$(trash)"
+      },
+      {
+        "command": "vs-code-recorder.revealInExplorer",
+        "title": "%command.revealInExplorer.title%",
+        "icon": "$(folder-opened)"
       }
     ],
     "viewsContainers": {
@@ -71,6 +81,28 @@
           "command": "vs-code-recorder.refreshRecordFiles",
           "when": "view == recordFiles",
           "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "vs-code-recorder.deleteRecordFile",
+          "when": "view == recordFiles",
+          "group": "inline"
+        },
+        {
+          "command": "vs-code-recorder.revealInExplorer",
+          "when": "view == recordFiles",
+          "group": "inline"
+        },
+        {
+          "command": "vs-code-recorder.deleteRecordFile",
+          "when": "view == recordFiles",
+          "group": "1_modification"
+        },
+        {
+          "command": "vs-code-recorder.revealInExplorer",
+          "when": "view == recordFiles",
+          "group": "2_workspace"
         }
       ]
     },
