feat(recording): Add custom folder name option for recordings
- Introduce new configuration option to ask for custom folder names
- Update recording process to support optional custom folder naming
- Add localization support for custom folder name input dialog
- Enhance file generation and processing to handle custom folder names
- Update package.json to include new configuration setting

--- a/package.json
+++ b/package.json
@@ -138,17 +138,23 @@
           "description": "%config.exportFormats.description%",
           "order": 2
         },
+        "vsCodeRecorder.recording.askFolderName": {
+          "type": "boolean",
+          "default": false,
+          "description": "%config.askFolderName.description%",
+          "order": 3
+        },
         "vsCodeRecorder.appearance.minimalMode": {
           "type": "boolean",
           "default": false,
           "description": "%config.minimalMode.description%",
-          "order": 3
+          "order": 4
         },
         "vsCodeRecorder.appearance.showTimer": {
           "type": "boolean",
           "default": true,
           "description": "%config.showTimer.description%",
-          "order": 4
+          "order": 5
         }
       }
     }
