--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vs-code-recorder",
+  "name": "crowd-coder",
   "displayName": "%displayName%",
   "description": "%description%",
   "version": "1.1.1",
-  "publisher": "MattiaConsiglio",
+  "publisher": "pdoom.org",
   "icon": "icon.png",
   "engines": {
     "vscode": "^1.89.0"
@@ -177,7 +177,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mattia-consiglio/VS-Code-Recorder.git"
+    "url": "git://github.com/p-doom/crowd-code.git"
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
