--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crowd-coder",
+  "name": "crowd-code",
   "displayName": "%displayName%",
   "description": "%description%",
   "version": "1.1.1",
