--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@vscode/l10n": "^0.0.18"
+    "@vscode/l10n": "^0.0.18",
+    "axios": "^1.7.2"
   }
 }
