Send metadata to lambda (#10)
* feat: push collected files to s3. added uuids to prohibit different users writing to same file

* fix: switch to api-gateway -> lambda fn -> s3 bucket instead of directly pushing files using local credentials

* Update src/recording.ts

Co-authored-by: Franz Srambical <79149449+emergenz@users.noreply.github.com>

* Update src/recording.ts

Co-authored-by: Franz Srambical <79149449+emergenz@users.noreply.github.com>

* Update src/recording.ts

Co-authored-by: Franz Srambical <79149449+emergenz@users.noreply.github.com>

* Update src/recording.ts

Co-authored-by: Franz Srambical <79149449+emergenz@users.noreply.github.com>

* bumped version to 1.1.2 and cleaned package-lock.json

* rename folderName to fileName

* feat: include userId and extension version as metadata when sending CSVs

- Add extension version and machineId (userId) to the payload sent to the backend when uploading CSV files.
- Store machineId globally in user settings for easy access.
- Add a new command to display the userId in the command palette.
- Update package.json and localization files to register the new command.

* fix: hash user id as well, since machine-id is not unique per user (for e.g. clusters)

* modify cmd description

* chore: rename filePath to baseFilePath for better readibility

* chore: rename filePath to baseFilePath for better readibility

* Update src/extension.ts

---------

Co-authored-by: Franz Srambical <79149449+emergenz@users.noreply.github.com>
Co-authored-by: Franz Srambical <franz.srambical@gmail.com>

--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
         "command": "vs-code-recorder.addToGitignore",
         "title": "%command.addToGitignore.title%",
         "icon": "$(git-ignore)"
+      },
+      {
+        "command": "vs-code-recorder.showUserId",
+        "title": "%command.showUserId.title%"
       }
     ],
     "viewsContainers": {
