--- a/package.json
+++ b/package.json
@@ -20,56 +20,56 @@
   "contributes": {
     "commands": [
       {
-        "command": "vs-code-recorder.startRecording",
+        "command": "crowd-code.startRecording",
         "title": "%command.startRecording.title%",
         "icon": "$(play)"
       },
       {
-        "command": "vs-code-recorder.stopRecording",
+        "command": "crowd-code.stopRecording",
         "title": "%command.stopRecording.title%",
         "icon": "$(stop)"
       },
       {
-        "command": "vs-code-recorder.openSettings",
+        "command": "crowd-code.openSettings",
         "title": "%command.openSettings.title%",
         "icon": "$(settings)"
       },
       {
-        "command": "vs-code-recorder.refreshRecordFiles",
+        "command": "crowd-code.refreshRecordFiles",
         "title": "%command.refreshRecordFiles.title%",
         "icon": "$(refresh)"
       },
       {
-        "command": "vs-code-recorder.deleteRecordFile",
+        "command": "crowd-code.deleteRecordFile",
         "title": "%command.deleteRecordFile.title%",
         "icon": "$(trash)"
       },
       {
-        "command": "vs-code-recorder.revealInExplorer",
+        "command": "crowd-code.revealInExplorer",
         "title": "%command.revealInExplorer.title%",
         "icon": "$(folder-opened)"
       },
       {
-        "command": "vs-code-recorder.addToGitignore",
+        "command": "crowd-code.addToGitignore",
         "title": "%command.addToGitignore.title%",
         "icon": "$(git-ignore)"
       },
       {
-        "command": "vs-code-recorder.showUserId",
+        "command": "crowd-code.showUserId",
         "title": "%command.showUserId.title%"
       }
     ],
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "vs-code-recorder",
+          "id": "crowd-code",
           "title": "crowd-code",
           "icon": "icon.svg"
         }
       ]
     },
     "views": {
-      "vs-code-recorder": [
+      "crowd-code": [
         {
           "id": "actions",
           "name": "%view.actions.name%",
@@ -87,7 +87,7 @@
     "menus": {
       "view/title": [
         {
-          "command": "vs-code-recorder.refreshRecordFiles",
+          "command": "crowd-code.refreshRecordFiles",
           "when": "view == recordFiles",
           "group": "navigation"
         },
@@ -99,22 +99,22 @@
       ],
       "view/item/context": [
         {
-          "command": "vs-code-recorder.deleteRecordFile",
+          "command": "crowd-code.deleteRecordFile",
           "when": "view == recordFiles",
           "group": "inline"
         },
         {
-          "command": "vs-code-recorder.revealInExplorer",
+          "command": "crowd-code.revealInExplorer",
           "when": "view == recordFiles",
           "group": "inline"
         },
         {
-          "command": "vs-code-recorder.deleteRecordFile",
+          "command": "crowd-code.deleteRecordFile",
           "when": "view == recordFiles",
           "group": "1_modification"
         },
         {
-          "command": "vs-code-recorder.revealInExplorer",
+          "command": "crowd-code.revealInExplorer",
           "when": "view == recordFiles",
           "group": "2_workspace"
         }
@@ -123,25 +123,25 @@
     "configuration": {
       "title": "%config.title%",
       "properties": {
-        "vsCodeRecorder.export.exportPath": {
+        "crowdCode.export.exportPath": {
           "type": "string",
-          "default": "${workspaceFolder}/vs-code-recorder/",
+          "default": "${workspaceFolder}/crowd-code/",
           "markdownDescription": "%config.exportPath.description%",
           "order": 0
         },
-        "vsCodeRecorder.export.createPathOutsideWorkspace": {
+        "crowdCode.export.createPathOutsideWorkspace": {
           "type": "boolean",
           "default": false,
           "description": "%config.createPathOutsideWorkspace.description%",
           "order": 1
         },
-        "vsCodeRecorder.export.addToGitignore": {
+        "crowdCode.export.addToGitignore": {
           "type": "boolean",
           "default": false,
           "description": "%config.addToGitignore.description%",
           "order": 2
         },
-        "vsCodeRecorder.export.exportFormats": {
+        "crowdCode.export.exportFormats": {
           "type": "array",
           "items": {
             "type": "string",
@@ -158,19 +158,19 @@
           "description": "%config.exportFormats.description%",
           "order": 3
         },
-        "vsCodeRecorder.recording.askFolderName": {
+        "crowdCode.recording.askFolderName": {
           "type": "boolean",
           "default": false,
           "description": "%config.askFolderName.description%",
           "order": 4
         },
-        "vsCodeRecorder.appearance.minimalMode": {
+        "crowdCode.appearance.minimalMode": {
           "type": "boolean",
           "default": false,
           "description": "%config.minimalMode.description%",
           "order": 5
         },
-        "vsCodeRecorder.appearance.showTimer": {
+        "crowdCode.appearance.showTimer": {
           "type": "boolean",
           "default": true,
           "description": "%config.showTimer.description%",
