--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crowd-code",
-  "displayName": "%displayName%",
-  "description": "%description%",
+  "displayName": "crowd-code",
+  "description": "Record your code editing activity in VS Code",
   "version": "1.1.3",
   "publisher": "pdoom-org",
   "icon": "icon.png",
@@ -16,47 +16,51 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "l10n": "./l10n",
   "contributes": {
     "commands": [
       {
         "command": "vs-code-recorder.startRecording",
-        "title": "%command.startRecording.title%",
+        "title": "Start Recording",
         "icon": "$(play)"
       },
       {
         "command": "vs-code-recorder.stopRecording",
-        "title": "%command.stopRecording.title%",
+        "title": "Stop Recording",
         "icon": "$(stop)"
       },
       {
+        "command": "vs-code-recorder.panicButton",
+        "title": "Panic Button",
+        "icon": "$(refresh)"
+      },
+      {
         "command": "vs-code-recorder.openSettings",
-        "title": "%command.openSettings.title%",
+        "title": "Open Settings",
         "icon": "$(settings)"
       },
       {
         "command": "vs-code-recorder.refreshRecordFiles",
-        "title": "%command.refreshRecordFiles.title%",
+        "title": "Refresh",
         "icon": "$(refresh)"
       },
       {
         "command": "vs-code-recorder.deleteRecordFile",
-        "title": "%command.deleteRecordFile.title%",
+        "title": "Delete",
         "icon": "$(trash)"
       },
       {
         "command": "vs-code-recorder.revealInExplorer",
-        "title": "%command.revealInExplorer.title%",
+        "title": "Reveal in File Explorer",
         "icon": "$(folder-opened)"
       },
       {
         "command": "vs-code-recorder.addToGitignore",
-        "title": "%command.addToGitignore.title%",
+        "title": "Add to .gitignore",
         "icon": "$(git-ignore)"
       },
       {
         "command": "vs-code-recorder.showUserId",
-        "title": "%command.showUserId.title%"
+        "title": "Show User ID"
       }
     ],
     "viewsContainers": {
@@ -72,15 +76,15 @@
       "vs-code-recorder": [
         {
           "id": "actions",
-          "name": "%view.actions.name%",
+          "name": "Actions",
           "icon": "icon.svg",
-          "contextualTitle": "%view.actions.contextualTitle%"
+          "contextualTitle": "Actions"
         },
         {
           "id": "recordFiles",
-          "name": "%view.recordFiles.name%",
+          "name": "Record Files",
           "icon": "icon.svg",
-          "contextualTitle": "%view.recordFiles.contextualTitle%"
+          "contextualTitle": "Record Files"
         }
       ]
     },
@@ -121,24 +125,24 @@
       ]
     },
     "configuration": {
-      "title": "%config.title%",
+      "title": "crowd-code Configuration",
       "properties": {
         "vsCodeRecorder.export.exportPath": {
           "type": "string",
           "default": "${workspaceFolder}/vs-code-recorder/",
-          "markdownDescription": "%config.exportPath.description%",
+          "markdownDescription": "Path where recordings will be exported. Use '${workspaceFolder}' to refer to the workspace folder.",
           "order": 0
         },
         "vsCodeRecorder.export.createPathOutsideWorkspace": {
           "type": "boolean",
           "default": false,
-          "description": "%config.createPathOutsideWorkspace.description%",
+          "description": "Whether to create the export path if it doesn't exist, even if it's outside the workspace folder.",
           "order": 1
         },
         "vsCodeRecorder.export.addToGitignore": {
           "type": "boolean",
           "default": false,
-          "description": "%config.addToGitignore.description%",
+          "description": "Whether to add the export path to .gitignore when creating it.",
           "order": 2
         },
         "vsCodeRecorder.export.exportFormats": {
@@ -155,25 +159,25 @@
             "JSON",
             "SRT"
           ],
-          "description": "%config.exportFormats.description%",
+          "description": "Formats to export the recording in.",
           "order": 3
         },
         "vsCodeRecorder.recording.askFolderName": {
           "type": "boolean",
           "default": false,
-          "description": "%config.askFolderName.description%",
+          "description": "Ask for a custom folder name before starting a recording",
           "order": 4
         },
         "vsCodeRecorder.appearance.minimalMode": {
           "type": "boolean",
           "default": false,
-          "description": "%config.minimalMode.description%",
+          "description": "Whether to show only the icon in the status bar when recording is stopped.",
           "order": 5
         },
         "vsCodeRecorder.appearance.showTimer": {
           "type": "boolean",
           "default": true,
-          "description": "%config.showTimer.description%",
+          "description": "Whether to show the timer in the status bar when recording.",
           "order": 6
         }
       }
@@ -204,6 +208,7 @@
     "@vscode/l10n-dev": "^0.0.35",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8.57.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
@@ -211,7 +216,6 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@vscode/l10n": "^0.0.18",
     "axios": "^1.7.2"
   }
 }
