--- a/package.json
+++ b/package.json
@@ -182,6 +182,8 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "ovsx:publish": "ovsx publish",
+    "vsce:package": "vsce package",
+    "release": "npm run package && vsce package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
@@ -200,6 +202,7 @@
     "@vscode/l10n-dev": "^0.0.35",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
+    "@vscode/vsce": "^2.24.0",
     "eslint": "^8.57.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
