fix: vs-code-recorder -> crowd-code

--- a/package.json
+++ b/package.json
@@ -100,12 +100,12 @@
           "group": "navigation"
         },
         {
-          "command": "vs-code-recorder.addToGitignore",
+          "command": "crowd-code.addToGitignore",
           "when": "view == actions",
           "group": "navigation"
         },
         {
-          "command": "vs-code-recorder.consent",
+          "command": "crowd-code.consent",
           "when": "view == actions",
           "group": "navigation"
         }
