--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "crowd-code",
-  "displayName": "crowd-code",
+  "displayName": "crowd-code-2-0",
   "description": "Record your code editing activity in VS Code",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "publisher": "pdoom-org",
   "icon": "icon.png",
   "engines": {
@@ -154,40 +154,23 @@
           "description": "Whether to add the export path to .gitignore when creating it.",
           "order": 2
         },
-        "crowdCode.export.exportFormats": {
-          "type": "array",
-          "items": {
-            "type": "string",
-            "enum": [
-              "JSON",
-              "SRT"
-            ]
-          },
-          "uniqueItems": true,
-          "default": [
-            "JSON",
-            "SRT"
-          ],
-          "description": "Formats to export the recording in.",
-          "order": 3
-        },
         "crowdCode.recording.askFolderName": {
           "type": "boolean",
           "default": false,
           "description": "Ask for a custom folder name before starting a recording",
-          "order": 4
+          "order": 3
         },
         "crowdCode.appearance.minimalMode": {
           "type": "boolean",
           "default": false,
           "description": "Whether to show only the icon in the status bar when recording is stopped.",
-          "order": 5
+          "order": 4
         },
         "crowdCode.appearance.showTimer": {
           "type": "boolean",
           "default": true,
           "description": "Whether to show the timer in the status bar when recording.",
-          "order": 6
+          "order": 5
         }
       }
     }
