--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "crowd-code",
   "description": "Crowd-sourcing a dataset to make agents code like humans",
   "version": "2.0.0",
-  "publisher": "pdoom-org",
+  "publisher": "p-doom",
   "icon": "icon.png",
   "engines": {
     "vscode": "^1.89.0"
